--- a/index.html
+++ b/index.html
@@ -1,23 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
-    <!-- <style> body {padding: 0; margin: 0;} </style> -->
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="p5.min.js"></script>
-    <script src="addons/p5.dom.min.js"></script>
-    <script type='text/javascript' src="addons/p5.dom.js"></script>
-    <script src="addons/p5.sound.min.js"></script>
-    <script src="addons/clmtrackr.js"></script>
-    <script src="models/model_pca_20_svm.js"></script>
-    <script src="models/model_pca_10_svm.js"></script>
-    <script src="models/model_pca_10_mosse.js"></script>
-    <script src="models/model_pca_20_mosse.js"></script>
-    <script src="models/model_spca_20_svm.js"></script>
-    <script src="models/model_spca_10_svm.js"></script>
-    <script src="sketch.js"></script>
-  </head>
-  <body>
-    <h3>MEME</h3>
-  </body>
+
+<head>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<meta charset="utf-8" />
+	<script src="ml5.min.js" type="text/javascript"></script>
+
+</head>
+
+<body>
+	<script src="sketch.js"></script>
+</body>
+
 </html>
