--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="">
 
 <head>
+  <meta charset="utf-8">
+
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
@@ -9,6 +11,7 @@
 	<meta charset="utf-8" />
 	<script src="ml5.min.js" type="text/javascript"></script>
 
+<title>MEME-welcome</title>
 </head>
 
 <body>
