--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.dom.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/addons/p5.sound.min.js"></script>
-    <script src="https://unpkg.com/ml5@0.1.3/dist/ml5.min.js"></script>    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
-
+    <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+    <!-- <style> body {padding: 0; margin: 0;} </style> -->
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="p5.min.js"></script>
+    <script src="addons/p5.dom.min.js"></script>
+    <script type='text/javascript' src="addons/p5.dom.js"></script>
+    <script src="addons/p5.sound.min.js"></script>
+    <script src="addons/clmtrackr.js"></script>
+    <script src="models/model_pca_20_svm.js"></script>
+    <script src="models/model_pca_10_svm.js"></script>
+    <script src="models/model_pca_10_mosse.js"></script>
+    <script src="models/model_pca_20_mosse.js"></script>
+    <script src="models/model_spca_20_svm.js"></script>
+    <script src="models/model_spca_10_svm.js"></script>
+    <script src="sketch.js"></script>
   </head>
   <body>
-    <script src="sketch.js"></script>
+    <h3>test.</h3>
   </body>
 </html>
