--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <script src="models/model_spca_20_svm.js"></script>
     <script src="models/model_spca_10_svm.js"></script>
     <script src="sketch.js"></script>
+    <title>MEME-2019</title>
   </head>
   <body>
     <h3>test.</h3>
