--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta name="viewport" width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0>
+    <meta charset="utf-8" />
     <!-- <style> body {padding: 0; margin: 0;} </style> -->
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="p5.min.js"></script>
