--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
     <title>MEME-2019</title>
   </head>
   <body>
+
     <h3>test.</h3>
   </body>
+  <script type="text/javascript">
+  <button id="button1" onclick="button1_click();">START</button>
+<script>
+function button1_click(createCanvas(800, 600);) {
+alert("시작");
+}
+  </script>
 </html>
