--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
-<!DOCTYPE html><html><head>
-	<script src="p5.min.js"></script>
-	<script src="p5.dom.min.js"></script>
-	<script src="p5.sound.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="style.css">
-	<meta charset="utf-8">
-	<script src="ml5.min.js" type="text/javascript"></script>
+<!DOCTYPE html>
+<html>
+  <head>
 
-</head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8" />
 
-<body>
-	<script src="sketch.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.dom.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/addons/p5.sound.js"></script>
+    <script src="https://unpkg.com/ml5@0.3.1/dist/ml5.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+  	<script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/posenet"></script>
+  	<script src="p5.clickable.js"></script>
+	
 
-
-</body></html>
+  </head>
+  <body>
+    <script src="sketch.js"></script>
+  </body>
+</html>
